[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
tracing-subscriber = "0.3.23"

[dependencies.tokio]
version = "1.51.0"
features = ["full"]
