[package]
name = "blog"
version = "0.1.1"
edition = "2024"

[dependencies]
axum = "0.8.8"
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
tracing-subscriber = "0.3.23"
chrono = { version = "0.4.45", features = ["serde"] }
tower-http = { version = "0.6.11", features = ["fs"] }
askama = "0.16.0"
pulldown-cmark = "0.13.4"
rand = "0.10.1"
bcrypt = "0.19.1"

[dependencies.tokio]
version = "1.51.0"
features = ["full"]
